# OptaneStudy

./: .gitignore  CMakeLists.txt  run.sh
src/kernel/: Makefile  common.h  debug.c  lat.c  latfs.mod.c  lattester.h  memaccess.h  output_30.txt  proc.c  rep.c  repfs.mod.c  tasks.c
src/testscript/: config.json  latency.sh  repeatr1.output.txt  run.example.sh
src/testscript/subtests/: 10_basiclat.sh  20_stridelat.sh
